--- a/ChangeLog
+++ b/ChangeLog
@@ -1,4 +1,20 @@
 2008-12-06  Jost Boekemeier  <jostb@intern>
+
+	* INSTALL, README.GNU_JAVA, java-servlet.ini: Removed; a tomcat or J2EE back end or a unix domain socket channel is now required.
+
+	* parser.c, protocol.h, bind.c: Removed.
+	
+	* README: FreeBSD is no longer supported by us. Use the PHP/Java
+	Bridge FreeBSD port instead.
+
+	* php-java-bridge.spec: tomcat is now required
+
+	* install.sh.in: tomcat is now required
+
+	* VERSION, php-java-bridge.spec: Version 5.4.0
+	
+
+2008-12-06  Jost Boekemeier  <jostb@intern>
 	
 	* server/META-INF/java/Client.inc
 	(__destruct): merge subsequent writes
