--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,16 @@
+2008-01-19  Jost Boekemeier  <jostb@intern>
+
+	* server/META-INF/java/JavaProxy.inc 
+	(java_unwrap): New function
+
+	* server/php/java/bridge/JavaBridge.java
+	(unwrapClosure): New function
+
+	* server/php/java/bridge/PhpProcedure.java
+	(unwrap): New function
+
+	* VERSION, php-java-bridge.spec: Version 5.4.3.1
+
 2008-01-06  Jost Boekemeier  <jostb@intern>
 
 	* server/php/java/bridge/Standalone.java
