--- a/ChangeLog
+++ b/ChangeLog
@@ -1,6 +1,57 @@
-2009-03-14  Jost Boekemeier  <jostb@intern>
+2008-04-11  Jost Boekemeier  <jostb@intern>
 
-	* server/php/java/script/servlet/PhpServletLocalScriptEngine.java: removed.
+	* server/META-INF/java/Client.inc
+	(__destruct): Destruct is not called after a fatal error, we must
+	use shutdown instead.
+	(java_shutdown): New procedure from __destruct
+	
+	* VERSION, php-java-bridge.spec: Version 5.4.4.2
+	
+2008-04-11  Jost Boekemeier  <jostb@intern>
+
+	* server/php/java/servlet/PhpCGIServlet.java
+	(init): Added php_include_java option
+	(setPathInfo): Load Java.inc if php_include_java is true
+	(setCGIEnvironment): Load Java.inc if php_include_java is true
+
+	* server/META-INF/java/JavaProxy.inc
+	(java_invoke): New procedure
+	
+2008-04-10  Jost Boekemeier  <jostb@intern>
+
+	* server/extract.sed: Added copyright notice
+
+	* server/prepend.sed: Added short path S1
+
+	* server/META-INF/java/Protocol.inc 
+	(java_getCompatibilityOption): New method
+	(java_SimpleHttpHandler): New class
+	(createHandler): Added short path S1
+	
+	* server/php/java/bridge/Parser.java
+	(initOptions): New procedure
+	(initOptions): Added short path S1
+	(parse): Added short path S1
+	
+	* server/php/java/bridge/Request.java
+	(init): New function
+	
+	* server/php/java/bridge/http/ContextRunner.java
+	(readLength): Added short path S1
+	(init): Added short path S1
+
+	* server/php/java/servlet/PhpCGIServlet.java
+	(init): Added short path S1
+	(setCGIEnvironment): Added short path S1
+	
+	* server/php/java/servlet/PhpJavaServlet.java
+	(init): Added short path S1
+	(getContextServer) New procedure
+	
+	
+2008-03-14  Jost Boekemeier  <jostb@intern>
+
+	* server/php/java/script/servlet/PhpServletHttpServerScriptEngine.java: removed.
 	
 	* server/prepend.sed: Include a remote only file when necessary.
 
@@ -38,7 +89,7 @@
 	* VERSION, php-java-bridge.spec: Version 5.4.4.1
 
 
-2009-03-07  Jost Boekemeier  <jostb@intern>
+2008-03-07  Jost Boekemeier  <jostb@intern>
 
 	* server/php/java/bridge/http/SimpleContextFactory.java
 	(SimpleContextFactory): Added managed flag.
@@ -90,7 +141,7 @@
 	* server/php/java/servlet/PhpCGIServlet.java
 	(setCGIEnvironment): Use new method
 	
-2009-02-24  Jost Boekemeier  <jostb@intern>
+2008-02-24  Jost Boekemeier  <jostb@intern>
 
 	* server/php/java/servlet/fastcgi/SocketChannelName.java
 	(waitForDaemon): timeout changed to 15s
@@ -110,7 +161,7 @@
 	
 	* VERSION, php-java-bridge.spec: Version 5.4.3.3
 	
-2009-02-16  Jost Boekemeier  <jostb@intern>
+2008-02-16  Jost Boekemeier  <jostb@intern>
 
 	* server/php/java/bridge/IManaged.java: new interface
 	
@@ -129,11 +180,11 @@
 	* server/META-INF/java/Protocol.inc
 	(write): sent the real host and port number
 	
-2009-02-08  Jost Boekemeier  <jostb@intern>
+2008-02-08  Jost Boekemeier  <jostb@intern>
 
 	* server/javabridge.policy: Removed obsolete file
 	
-2009-02-06  Jost Boekemeier  <jostb@intern>
+2008-02-06  Jost Boekemeier  <jostb@intern>
 
 	* server/php/java/bridge/JavaBridge.java
 	(GetSetProp, CreateObject, Invoke): Removed obsolete check
@@ -144,7 +195,7 @@
 	* server/php/java/bridge/global.properties.in
 	(PHP_EXEC_ARGS): new option
 	
-2009-01-19  Jost Boekemeier  <jostb@intern>
+2008-01-19  Jost Boekemeier  <jostb@intern>
 
 	* server/META-INF/java/JavaProxy.inc 
 	(java_unwrap): New function
@@ -157,7 +208,7 @@
 
 	* VERSION, php-java-bridge.spec: Version 5.4.3.1
 
-2009-01-06  Jost Boekemeier  <jostb@intern>
+2008-01-06  Jost Boekemeier  <jostb@intern>
 
 	* server/php/java/bridge/Standalone.java
 	(escape): removed obsolete procedure
