--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2009-07-02    <jostb@intern>
+
+	* server/META-INF/java/JavaBridge.inc
+	(java_autoload_function): PHP 5.3 final uses \ instead of ::.
+	
+	
 2009-04-25    <jostb@intern>
 	
 	* VERSION, php-java-bridge.spec: Version 5.4.4.2 released
