--- a/debian/changelog
+++ b/debian/changelog
@@ -1,3 +1,12 @@
+php-java-bridge (5.4.4.2-3) unstable; urgency=low
+
+  * SELinux EXPERIMENTAL packaging.
+
+ -- Andre Felipe Machado <andremachado@techforce.com.br>  Thu, 03 Jul 2009 16:29:45 -0300
+
+
+
+
 php-java-bridge (5.4.4.2-2) unstable; urgency=low
 
   * Corrections at Tomcat 5.5 security policy. EXPERIMENTAL and TOO permissive.
